# Azure-Kinect-Sensor-SDK

cmake/: k4aCompilerFlags.cmake
examples/: CMakeLists.txt
examples/depthrun/: CMakeLists.txt  main.c
examples/streaming/: main.c
include/k4a/: k4a_depth_standalone.h  k4atypes.h
include/k4ainternal/: depthengine.h
src/: CMakeLists.txt
src/capturesync/: capturesync.c
src/depth/: CMakeLists.txt  cudade.cu  depth.c  depthengine.c
src/depth_mcu/: depth_mcu.c
src/sdk/: CMakeLists.txt  k4a.c
src/tewrapper/: CMakeLists.txt  tewrapper.c
src/transformation/: CMakeLists.txt
tests/DepthTests/UnitTest/: CMakeLists.txt
tests/latency/: latency_perf.cpp
tests/throughput/: throughput_perf.cpp
tools/: CMakeLists.txt
tools/node_calib/: CMakeLists.txt  main.cpp  nfov.csv  nfov_calib.r
